[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "macdii"
version = "0.0.5"
dependencies = [
    "lxml ~= 5.3",
    "numpy ~= 1.26",
    "pyteomics ~= 4.7",
    "pandas ~= 2.0",
    "openpyxl ~= 3.0",
]

[project.optional-dependencies]
dev = [
    "honcho",
    "pandas-stubs",
    "ruff",
    "ty",
]
